# giant-midi-keyboard

./: .gitmodules  AUTHORS  LICENSE  README.md
cad/elec/: .gitignore  USB-controller-panelized.kicad_pcb  fp-lib-table  front-panel-panelized.kicad_pcb  giant_midi_keyboard-cache.lib  giant_midi_keyboard.cmp  giant_midi_keyboard.dcm  giant_midi_keyboard.kicad_pcb  giant_midi_keyboard.lib  giant_midi_keyboard.net  giant_midi_keyboard.pro  giant_midi_keyboard.sch
cad/elec/USB-controller/: fp-lib-table  giant_midi_keyboard-cache.lib  giant_midi_keyboard.cmp  giant_midi_keyboard.kicad_pcb  giant_midi_keyboard.kicad_pcb-bak  giant_midi_keyboard.net  giant_midi_keyboard.pro  giant_midi_keyboard.sch
cad/elec/front-panel/: fp-lib-table  front-panel-cache.lib  front-panel.cmp  front-panel.kicad_pcb  front-panel.kicad_pcb-bak  front-panel.net  front-panel.pro  front-panel.sch
cad/elec/giant-midi-keyboard.pretty/: ARDUINO_MICRO.kicad_mod  FSM2JAH.kicad_mod  Header_2x13.kicad_mod  Header_2x5.kicad_mod  LED-5MM.kicad_mod
cad/mechanics/: .gitignore  Base.ipt  Base_Left.ipt  Base_Right.ipt  Base_Under.ipt  Captor.ipt  Control_Box.ipt  Do.ipt  Do_Plain.ipt  Drawings.idw  Fa.ipt  Feinte.ipt  Hidder_Left.ipt  Hidder_Right.ipt  La.ipt  Mi.ipt  Re.ipt  Si.ipt  Sol.ipt  giant-midi-keyboard.iam
calibrator/: CMakeLists.txt
firmware/: .gitignore  CMakeLists.txt  avrdude.conf
firmware/cmake/: avr-toolchain.cmake
firmware/cmake/Platform/: Avr.cmake
firmware/communication/: communication.c  communication.h
firmware/src/: CMakeLists.txt  Descriptor.c  Descriptor.h  KeyReader.c  KeyReader.h  LUFAConfig.h  Registers.c  Registers.h  Systime.c  Systime.h  USB.c  USB.h  UserInterface.c  UserInterface.h  main.c
tools/calibrator/: CMakeLists.txt
tools/calibrator/src/: CMakeLists.txt  GMKDevice.cpp  GMKDevice.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Oscilloscope.cpp  Oscilloscope.h  Oscilloscope.ui  calibrator_fr.ts  common.h  lusb.cpp  lusb.h  main.cpp  ts.qrc.in
